refactor: move all cart endpoints to app\api\v1\endpoints\cart.py

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,6 @@ ALGORITHM="your-algorithm-for-jwt"
 WEBSITE_URL="your web-site-url-https://127.0.0.1:8000"
 ACTIVATION_TOKEN_EXPIRE_HOURS="count-of-expire-hours-for-activation-token"
 PASSWORD_RESET_TOKEN_EXPIRE_HOURS="count-of-expire-hours-for-password-reset-token"
+STRIPE_PUBLISHABLE_KEY="your-stripe-publishable-key"
+STRIPE_SECRET_KEY="your-stripe-secret-key"
+HOST=your-host
